ArgoDC-Events/webhook-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-events-webhook
  namespace: argo-events
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - "webhooks.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: github-eventsource-svc
          port: 12000
